--- a/FileProcessingBenchmark/FileProcessingBenchmark.csproj
+++ b/FileProcessingBenchmark/FileProcessingBenchmark.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="Bogus" Version="35.6.1" />
   </ItemGroup>
 
   <ItemGroup>
